--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=
 # Configuración de JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+app.jwtSecret=yourJWTSecretKey
+app.jwtExpirationInMs=86400000  # 24 hours
+
