--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,26 @@
 spring.application.name=Gestor de Tareas Backend
+
 # Configuración de la conexión a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/gestion?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-# Configuración de JPA
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Configuración de JWT
 app.jwtSecret=yourJWTSecretKey
-app.jwtExpirationInMs=86400000  # 24 hours
+app.jwtExpirationInMs=86400000
+
+# Configuración de usuarios
+spring.security.user.name=root
+spring.security.user.password=root
 
